--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(food_ordering)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(food_ordering main.cpp)
+add_executable(food_ordering login.c login.h main.c preference.c preference.h print.c print.h choice.c choice.h)
